--- a/repositoryUserInterface/public/stylesheets/style.css
+++ b/repositoryUserInterface/public/stylesheets/style.css
@@ -778,10 +778,8 @@ div #selectedVPDS{
 	border-width: 0 1px 1px 0px;
 }
 
-#trData{
-	
-}
-
-#trControl td{
-	
+#listHeader td {
+	text-align: center;
+	font-size:15px;
+	font-weight: bold;
 }
