Enabled viewing of registered VPDS by the owner

--- a/repositoryUserInterface/app/views/Application/editguardrule.html
+++ b/repositoryUserInterface/app/views/Application/editguardrule.html
@@ -66,7 +66,6 @@ lang="en">
 				$("#errorDiv").hide();
 				$("#getDeviceErrorDiv").hide();
 
-
 				/**
 				 * @param :Error Information
 				 * This function appends the passed string to the AddDeviceErrorDiv and shows the relevant error container
@@ -397,6 +396,7 @@ lang="en">
 				<button class='google-button-blue'  id="addGuardRule">
 					Add Guard Rule
 				</button>
+				<p class="space"></p>
 				<!--  added this -->
 			</div>
 			
