--- a/repositoryUserInterface/app/views/Application/registervpds.html
+++ b/repositoryUserInterface/app/views/Application/registervpds.html
@@ -9,17 +9,26 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title> Register VPDS</title>
 		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/style.css'}">
+		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/jquery-ui-1.8.21.custom.css'}">
 		<script src="@{'/public/js/libs/modernizr-2.0.6.min.js'}"></script>
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+
 		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script type="text/javascript" src="@{'/public/javascripts/utilityFunctions.js'}"></script>
+		<script src="@{'/public/javascripts/jquery-ui-1.8.20.custom.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<!--<script type="text/javascript" src="@{'/public/javascripts/speakClient.js'}"></script>-->
 		
 		<script type="text/javascript">
 			$(document).ready(function() {
 
-							
-				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
+				/*
+				 * Setting the AJAX to work in synchronous fashion
+				 */
+				 	
+				jQuery.ajaxSetup({
+					async : false
+				});
+
 				var usertype = $("#usertype").val();
 
 				if (usertype == "USER")
@@ -79,6 +88,61 @@
 					return errorState;
 
 				}
+
+				$("#dialog:ui-dialog").dialog("destroy");
+				var dlg = $("#dialog").dialog({
+					autoOpen : false,
+					draggable : true,
+					resizable : true,
+					width : 400,
+					modal : true
+				});
+
+				$( "#dialog" ).bind( "dialogbeforeclose", function(event, ui) {
+					$("#dialog").html("");
+				});
+
+
+				$("#IDViewVPDSList").click(function(){
+					/* Get VPDS List*/
+					
+					var responseFromServer = {};
+					var urlGetVPDSList = URL_UI_SERVER + URL_VPDS_LIST;
+					try{
+						$.post(urlGetVPDSList, function(rData) {
+
+					    		responseFromServer = rData;
+					    });
+					    
+					    if (responseFromServer[RESPONSE_STATUS_CODE] == NO_REGISTERED_VPDS){
+					    	alertAddRegisterError("You have not registered any VPDS");
+					    }
+					    else if (responseFromServer.hasOwnProperty(RESPONSE_STATUS_CODE)){
+					    	alertAddRegisterError("Following errors occurred " + responseFromServer[RESPONSE_MESSAGE]);
+					    }
+					    else{
+					    	//alert(JSON.stringify(responseFromServer));
+					    	
+					    	var numberOfVPDS = responseFromServer[VPDS_LIST_ARRAY].length;
+					    	if (numberOfVPDS > 0) {
+					    		$("#dialog").append("<div id =\"errorCDiv\" style=\"color: red;padding:5px; font-size: 1\"</div><br/>");
+								$("#errorCDiv").hide();
+								$("#dialog").append("<table id=\"vpdsList\" style=\"font-size:15px\" class='shareDevice'><tr id=\"listHeader\"><td>VPDS Name</td><td style=\"border-width:0px\">VPDS URL</td></tr></table");
+
+					    		for (var index in responseFromServer[VPDS_LIST_ARRAY]) 
+					    			$("#vpdsList").append("<tr><td>"+ responseFromServer[VPDS_LIST_ARRAY][index][VPDS_NAME]+"</td><td id='"+ responseFromServer[VPDS_LIST_ARRAY][index][VPDSOWNER_KEY] +"' style=\"border-width:0px\">"+responseFromServer[VPDS_LIST_ARRAY][index][VPDS_URL]+"</td></tr>");
+					    		dlg.dialog("open");
+								return false;
+					    	}
+					    	else
+					    		alertAddRegisterError("You have not registered any VPDS");			    	
+				    	}
+					}
+					catch(e){
+					    alertAddRegisterError("Error: " + e);
+					}
+
+				});
 
 
 				/* 'Register VPDS request' button functionality*/
@@ -166,7 +230,24 @@
 			<p class="space"></p>
 			<div id="registerVPDS">
 				<!-- Left pane starts -->
-				<div id="visualBox" style="">
+				<div id="visualBox" style="width:100%">
+
+					<!--Right Pane starts here-->
+					<div id="displayVPDSList" style="float:right;">
+						<div class="leftDiv" style="clear:both;text-align:center;">
+							<div id="dialog" title = "Registered VPDS" style="font-size:1;"></div>
+							<button id="IDViewVPDSList" class="google-button">
+							My Registered VPDS
+							</button>
+							<br/>
+						</div>
+						<div class="rightDiv">
+							<span class="errorVisual" id="spanViewRequest"></span>
+						</div>
+						<br />
+					</div>
+					<!-- Right Pane ends here-->
+
 
 					<div class="leftDiv">
 						<label>Enter VPDS Name:<sup>*</sup></label>
